[fix]:[][SQLite引擎重构，派生指标ok]